This commit adds background color to the other three sections of the page

--- a/index.css
+++ b/index.css
@@ -7,3 +7,12 @@ body{
 #streetfood{
   background-color: #ffffff;
 }
+.one{
+  background-color:#e5e5e5;
+}
+.two{
+  background-color:#bfbfbf ;
+}
+.three{
+  background-color:#FFD77C;
+}
