--- a/index.css
+++ b/index.css
@@ -16,3 +16,11 @@ body{
 .three{
   background-color:#FFD77C;
 }
+#nav {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  overflow: auto;
+  padding: 12px;
+}
