This commit styles the <h>tags of the first section of the website

--- a/index.css
+++ b/index.css
@@ -28,3 +28,15 @@ li{
   display: inline;
   text-align: center;
 }
+
+#streeth1{
+  font-size: 50px;
+  line-height: 40px;
+
+
+}
+
+#streeth2{
+  font-size: 30PX;
+  line-height: 10px;
+}
