--- a/index.css
+++ b/index.css
@@ -73,3 +73,9 @@ li{
   height: 200px;
   width: 250px;
 }
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 40%;
+  background-color: #ffffff;
+}
