--- a/index.css
+++ b/index.css
@@ -83,3 +83,17 @@ li{
   background-color: #bfbfbf;
   padding: 10px;
 }
+#us{
+  color:#6CB840;
+
+}
+#menu{
+  color: #6CB840;
+
+}
+
+#hotdeals {
+  background-color:  #C9ECB5;
+
+
+}
