--- a/index.css
+++ b/index.css
@@ -4,18 +4,23 @@ body{
   color: black;
   background-color: #ffffff;
 }
+
 #streetfood{
   background-color: #ffffff;
 }
+
 .one{
   background-color:#e5e5e5;
 }
+
 .two{
   background-color:#bfbfbf ;
 }
+
 .three{
   background-color:#FFD77C;
 }
+
 #nav {
   list-style-type: none;
   margin: 0;
@@ -24,6 +29,7 @@ body{
   overflow: auto;
   padding: 12px;
 }
+
 li{
   display: inline;
   text-align: center;
@@ -38,6 +44,7 @@ li{
   font-size: 30PX;
   line-height: 10px;
 }
+
 #street {
   text-align: left;
   padding: 30px;
@@ -57,6 +64,7 @@ li{
 #eat {
   color: #EAAB1B;
 }
+
 #together{
   background-color: 	#ffffff;
   text-align: right;
@@ -73,30 +81,77 @@ li{
   height: 200px;
   width: 250px;
 }
-.card {
+
+.cards {
+  padding: 60px;
+}
+
+.card-menu {
+  background-color: #6CB840;
+  padding: 60px;
+}
+
+.menu-items {
+  padding: 10px;
+  background-color: white;
+  border-bottom-right-radius: 40px;
+  width: 250px;
+  height: 130px;
+}
+
+.menu-items  h4 {
+  color: inherit;
+  margin-left: -20px;
+}
+
+
+.humb-descr {
+  display: flex;
+  justify-content: space-between;
+}
+
+.humb-descr img {
+  margin-left: -60px;
+  width: 120px;
+  height: auto;
+}
+
+.humb-descr p {
+  margin-top: -10px;
+}
+
+.menu-list-item {
+  margin-bottom: 15px;
+  display: flex;
+  justify-content: space-between;
+}
+
+
+/* .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   width: 40%;
   background-color: #ffffff;
-}
+} */
+
 #exploremenu {
   background-color: #bfbfbf;
   padding: 10px;
 }
+
 #us{
   color:#6CB840;
 
 }
+
 #menu{
   color: #6CB840;
-
 }
 
 #hotdeals {
   background-color:  #C9ECB5;
-
-
 }
+
 #contactus {
   background-color: #FFD77C;
   padding: 10px;
